Trigger fastlane adhoc for master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ workflows:
       - adhoc:
           filters:
             branches:
-              only: development
+              only: master
           requires:
             - build-and-test
       #- beta:
