Update circle ci config to run all fast lanes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,12 +59,7 @@ workflows:
     jobs:
       - build-and-test
       - adhoc:
-          filters:
-            branches:
-              only: master
-          requires:
-            - build-and-test
-      #- beta:
+      - beta:
           #filters:
             #branches:
               #only: master
