--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,6 @@ workflows:
   version: 2
   build-test-adhoc:
     jobs:
-      - build-and-test
+      #- build-and-test
       - adhoc
       - beta
