--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
   adhoc:
     macos:
-      xcode: "16.2."
+      xcode: "16.2"
     working_directory: /Users/distiller/project
     environment:
       FL_OUTPUT_DIR: output
